fixing flex-wrap on screen sizes

--- a/src/components/Carousel/style.scss
+++ b/src/components/Carousel/style.scss
@@ -9,3 +9,9 @@
     justify-content: space-evenly;
     align-items: center;
 }
+
+@media screen and (min-width: 1200px) {
+    #vids {
+        flex-wrap: nowrap;
+    }
+}
