--- a/src/components/Video/style.scss
+++ b/src/components/Video/style.scss
@@ -1,3 +1,3 @@
 .vid {
-    margin: 2em .5em;
+    margin: 2em .25em;
 }
